update Daany notebooks to reflect the Daany 1.1.0

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
 .ipynb_checkpoints/net_jupyter_notebook_part2-checkpoint.ipynb
+notebooks/Daany Tutorials/.ipynb_checkpoints/Untitled-checkpoint.ipynb
+notebooks/Daany Tutorials/.ipynb_checkpoints/Untitled1-checkpoint.ipynb
+notebooks/Daany Tutorials/.ipynb_checkpoints/Daany_DevGuide_Part_Foundations-checkpoint.ipynb
+notebooks/Daany Tutorials/Untitled.ipynb
